Updated controllers for linking/unlinking entities.
