# src/routes/factor-route.js
@@ -8,7 +8,9 @@ router.get('/', factorController.getAll);
 router.get('/:factorId', factorController.getSingle);
 router.put('/:factorId', factorController.update);
 router.delete('/:factorId', factorController.remove);
-router.post('/:factorId/contributors', contributorController.create);
+router.post('/:factorId/contributors', contributorController.addToParent);
 router.get('/:factorId/contributors', contributorController.getAllByParent);
+router.put('/:factorId/contributors/:contributorId', contributorController.linkToParent);
+router.delete('/:factorId/contributors/:contributorId', contributorController.unlinkFromParent);
 
 export default router;
