# src/routes/milestone-route.js
@@ -9,5 +9,7 @@ router.put('/:milestoneId', milestoneController.update);
 router.delete('/:milestoneId', milestoneController.remove);
 router.post('/:milestoneId/factors', factorController.create);
 router.get('/:milestoneId/factors', factorController.getAllByParent);
+router.put('/:milestoneId/factors/:factorId', factorController.linkToParent);
+router.delete('/:milestoneId/factors/:factorId', factorController.unlinkFromParent);
 
 export default router;
